Refactor in order to remove the Result request model and Present simplification